[gd_scene load_steps=5 format=3 uid="uid://yn4s15yxfg8o"]

[ext_resource type="Script" path="res://Events/event_choice/split_event_choice.gd" id="1_hgjkq"]
[ext_resource type="Script" path="res://Events/event_choice/choice_coin_box_data.gd" id="2_8c7mr"]

[sub_resource type="Resource" id="Resource_06b46"]
script = ExtResource("2_8c7mr")
coin_amount = 4
target_heads = 1
operator = 1

[sub_resource type="LabelSettings" id="LabelSettings_tfead"]
font_size = 14

[node name="SplitEventChoice" type="Control"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_hgjkq")
coinbox_data = SubResource("Resource_06b46")

[node name="TopContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Button" type="Button" parent="TopContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Label" type="Label" parent="TopContainer/Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_tfead")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="TopContainer/Button" to="." method="_on_Button_pressed"]
